# random_names

./: .gitignore  Pipfile  README.md  build.py  pyproject.toml
.config/: .pylintrc  .pylintrc_scripts  .pynt  requirements-dev.txt  requirements_for_safety.txt
.config/.build_state/: file_hash_liccheck.txt  file_hash_pin_dependencies.txt  file_hash_pyroma.txt  file_hash_safety.txt  last_change_check_manifest.txt  last_change_dodgy.txt  last_change_flake8.txt  last_change_mypy.txt  last_change_package.txt
.github/workflows/: build.yml
docs/: TODO.md
navio_tasks/commands/: cli_get_secrets.py  cli_pytest.py
random_names/: docker_style.py  make_name.py  settings.py
random_names/etl/: README.md  reform_words.py  word_harvestor.py
random_names/utils/: user_trace.py
reports/: sonar-unit-test-results.xml
